2007-11-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalendarSelector.m ([UIxCalendarSelector
	-calendars]): same as below.

	* UI/Contacts/UIxContactsListViewContainer.m
	([UIxContactsListViewContainer -currentContactFolderName]):
	translate the display name if its the default one.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -create]): overriden method that invokes
	its ancestor and then activate itself within the user settings.

	* SoObjects/SOGo/SOGoParentFolder.m ([SOGoParentFolder
	-appendPersonalSources]): when the user is the owner of the
	current folder, we create the "personal" folder if it doesn't
	exist by invoking "create".

	* SoObjects/SOGo/AgenorUserDefaults.m ([AgenorUserDefaults
	-primaryFetchProfile]): when no row is returned, we initialize
	"values" to a new dictionary. This solves a bug where the defaults
	would not be initialized properly.

2007-11-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m ([-compare:otherFolder]): method
	moved into the SOGoFolder class.

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject -saveContentString:_iCalinUIDs:_uids]):
	simplified method by directly building a similar appointment
	object with the current folder as container.

	* SoObjects/Contacts/SOGoContactLDAPFolder.m
	([SOGoContactLDAPFolder
	-appendObject:objectwithBaseURL:baseURLtoREPORTResponse:r]):
	take the content of an object returned by
	lookupName:inContext:acquire: instead of the dictionary passed as
	parameter since it represents a flattened entry return by
	lookupContactsWithFilter...

	* SoObjects/Contacts/SOGoFolder+CardDAV.m: NSObject+CardDAV
	category renamed to SOGoFolder+CardDAV.

	* SoObjects/SOGo/SOGoParentFolder.m: no longer a subclass of
	SOGoObject, but of SOGoFolder instead.

	* SoObjects/SOGo/SOGoUserFolder.m: no longer a subclass of
	SOGoGCSFolder, but of SOGoFolder instead.

	* SoObjects/Appointments/SOGoAppointmentFolder.m